<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authorization_background"
    android:padding="15dp"
    tools:context=".Fragment.Fragment.Authorization.RegistrationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvCreateAccount"
            android:layout_marginTop="@dimen/marginTop"
            android:orientation="vertical"
            android:padding="10dp"
            >




            <EditText
                android:id="@+id/name"
                style="@style/edittextRegistrationTheme"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="3dp"
                android:hint="@string/Name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:nextFocusDown="@string/Email"
               />

            <EditText
                android:id="@+id/email"
               style="@style/edittextRegistrationTheme"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="3dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@string/birthDate"
                />

            <EditText
                android:id="@+id/birthDate"
              style="@style/edittextRegistrationTheme"
                android:drawableLeft="@drawable/ic_date"
                android:drawablePadding="3dp"
                android:hint="@string/birthDate"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/spinnerRegistrationTheme"
    >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_blood"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bloodType"


        />
</LinearLayout>


            <EditText
                android:id="@+id/donateDate"
              style="@style/edittextRegistrationTheme"
                android:background="@drawable/authorization_edittext_shape"
                android:drawableLeft="@drawable/ic_date"
                android:drawablePadding="3dp"
                android:hint="@string/lastDonateDate"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"

                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/spinnerRegistrationTheme"

                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"/>
                <Spinner
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <Spinner
                    android:id="@+id/city"
                    style="@style/spinnerRegistrationTheme"
                    android:visibility="gone"

                    />
            </LinearLayout>



            <EditText
                android:id="@+id/Phone"
               style="@style/edittextRegistrationTheme"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="3dp"
                android:hint="@string/Phone"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:nextFocusDown="@string/Password"
                />

            <EditText
                android:id="@+id/Password"
               style="@style/edittextRegistrationTheme"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="3dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:nextFocusDown="@string/confirmPassword"
                />

            <EditText
                android:id="@+id/confirmPassword"
               style="@style/edittextRegistrationTheme"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="3dp"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                />



            <Button
               android:id="@+id/btnRegister"
                style="@style/buttonTheme"
                android:text="@string/Register"
                />


        </LinearLayout>

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/createNewAccount"
            android:textColor="@color/white"
            android:textSize="@dimen/title" />
    </RelativeLayout>

</ScrollView>