<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Fragment.Authorization.ConfirmPasswordFragment"
    android:background="@drawable/authorization_background"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/lnForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/marginTop"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/authorization_logo"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/lnForgetPassword"
        >

        <EditText
            android:id="@+id/confirmCode"
            style="@style/edittextRegistrationTheme"
            android:inputType="number"
            android:hint="@string/confirmCode"
            android:maxLines="1"
            android:maxLength="4"
            />


        <EditText
            android:id="@+id/newPassword"
           style="@style/edittextRegistrationTheme"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="3dp"
            android:inputType="textPassword"
            android:hint="@string/newPassword"
            android:maxLines="1"
            android:maxLength="16"
            />
        <EditText
            android:id="@+id/newConfirmPassword"
           style="@style/edittextRegistrationTheme"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="3dp"
            android:inputType="textPassword"
            android:hint="@string/confirmNewPassword"
            android:maxLines="1"
            android:maxLength="16"
            />

        <Button
            android:id="@+id/btnLogin"
            style="@style/buttonTheme"
            android:text="@string/Change"
            />
    </LinearLayout>

</RelativeLayout>